@@ -5,6 +5,11 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Get the gendsa program working (hopefully) and add it to app list. Remove
+     encryption from sample DSA keys (in case anyone is interested the password
+     was "1234").
+     [Steve Henson]
+
   *) Make _all_ *_free functions accept a NULL pointer.
      [Frans Heymans <fheymans@isaserver.be>]
 
